test/valid/TestMultiplicative2IfThenElsePrecedence/TestMultiplicative2IfThenElsePrecedence.plume
/**
* From Multiplicative 2 if/then/else precendence check
* @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
* @version $id$ 
*
*/

class TestMultiplicative2IfThenElsePrecedence extends Object is
	method main : () -> String is   
		if  1+1 > 3 &&  1+1 >=  3*1   && 1 == 3 ||   4*1  < 7+7 && 3 <= 4-1  && 4-1 >= 3 && 4 == 2*1 + 2    
		then "pass" // expression should be true
		else "fail"   // expression should not be evaluated to false
		
	//expect output : pass 